# usbsoftrock

./: .gitignore  README.txt  do  usbsoftrock_1.0.2-0.dsc  usbsoftrock_1.0.2-0_i386.build  usbsoftrock_1.0.2-0_i386.changes  usbsoftrock_1.0.2-0_i386.deb  usbsoftrock_1.0.2-0gz1.dsc  usbsoftrock_1.0.2-0gz1_i386.build  usbsoftrock_1.0.2-0gz1_i386.changes  usbsoftrock_1.0.2-0gz1_i386.deb  usbsoftrock_1.0.2-0gz1_source.build  usbsoftrock_1.0.2-0gz1_source.changes  usbsoftrock_1.0.2~svn5-0gz1.dsc  usbsoftrock_1.0.2~svn5-0gz1_i386.build  usbsoftrock_1.0.2~svn5-0gz1_i386.changes  usbsoftrock_1.0.2~svn5-0gz1_i386.deb  usbsoftrock_1.0.2~svn5-0gz1_source.build  usbsoftrock_1.0.2~svn5-0gz1_source.changes  usbsoftrock_1.0.2~svn5-0gz1_source.debexpo.upload
.github/workflows/: codeql-analysis.yml
usbsoftrock-1.0.2/: AUTHORS  INSTALL  Makefile.in  README  THANKS  autogen.sh  config.h  config.h.in  configure.ac  operations.h  usbsoftrock
usbsoftrock-1.0.2.orig/: usbsoftrock.c
usbsoftrock-1.0.2/.deps/: config_ops.Po  interactive.Po  operations.Po  usbsoftrock.Po
usbsoftrock-1.0.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
usbsoftrock-1.0.2/debian/: changelog  control  files  rules  usbsoftrock.1  watch
usbsoftrock-1.0.2/debian/patches/: debian-changes
usbsoftrock-1.0.2/debian/source/: patch-header
usbsoftrock-1.0.2/debian/tmp/DEBIAN/: control
usbsoftrock-1.0.2/debian/usbsoftrock/DEBIAN/: control  md5sums
usbsoftrock-1.0.2/debian/usbsoftrock/usr/share/doc/usbsoftrock/: copyright
usbsoftrock-1.0.2/src/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  config.status  configure  interactive.c  operations.c  usbsoftrock  usbsoftrock.c
usbsoftrock-1.0.2/src/.deps/: config_ops.Po  interactive.Po  operations.Po  usbsoftrock.Po
usbsoftrock-1.0.2/src/autom4te.cache/: traces.0
usbsoftrock-1.0.2~svn5/: Makefile.in  autogen.sh
usbsoftrock-1.0.2~svn5.orig/: THANKS  config.h.in
usbsoftrock-1.0.2~svn5/autom4te.cache/: output.0  requests  traces.0
usbsoftrock-1.0.2~svn5/debian/: changelog  control  files  rules  usbsoftrock.1  usbsoftrock.manpages  usbsoftrock.substvars  watch
usbsoftrock-1.0.2~svn5/debian/patches/: debian-changes
usbsoftrock-1.0.2~svn5/debian/tmp/DEBIAN/: control  md5sums
usbsoftrock-1.0.2~svn5/debian/usbsoftrock/DEBIAN/: control  md5sums
usbsoftrock-1.0.2~svn5/src/: interactive.h  usbsoftrock
